--- a/assets/css/common.less
+++ b/assets/css/common.less
@@ -123,3 +123,10 @@ input:-ms-input-placeholder{  /* Internet Explorer 10-11 */
   clear:both;
 }
 .clearfix {*zoom:1;}/*IE/7/6*/
+.error-txt{
+  position: absolute;
+  left: 0;
+  bottom: -17px;
+  color: #ff0000;
+  font-size: 12px;
+}
