--- a/assets/css/index.less
+++ b/assets/css/index.less
@@ -1,6 +1,6 @@
 @import './common';
 @import './reset';
-@import '../iconfont.css';
+@import '../iconfont/iconfont.css';
 @import "./class";
 @import "./function";
 @import 'unit';
