--- a/assets/css/function.less
+++ b/assets/css/function.less
@@ -35,6 +35,7 @@
 .f-lhn{line-height:normal;}
 .f-tdu,.f-tdu:hover{text-decoration:underline;}
 .f-tdn,.f-tdn:hover{text-decoration:none;}
+.f-tdlh{text-decoration: line-through ;}
 .f-toe{overflow:hidden;word-wrap:normal;white-space:nowrap;text-overflow:ellipsis;}
 .f-csp{cursor:pointer;}
 .f-csd{cursor:default;}
