--- a/assets/css/common.less
+++ b/assets/css/common.less
@@ -105,6 +105,11 @@ input:-ms-input-placeholder{  /* Internet Explorer 10-11 */
 .el-pagination.is-background .el-pager li:not(.disabled):hover{
   color: #172099 !important;
 }
+input:-internal-autofill-selected {
+  background-color: #fff;
+  background-image: none !important;
+  color: rgb(0, 0, 0) !important;
+}
 //.clearfix:after {
 //  content: ".";
 //  display: block;
